--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A Node.js demo project with TypeScript",
     "main": "dist/server.js",
     "scripts": {
-        "start": "node dist/server.js",
+        "start": "node src/dist/server.js",
         "dev": "nodemon src/server.ts",
         "build": "tsc",
         "watch": "tsc -w"
