--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "A Node.js demo project with TypeScript",
     "main": "dist/server.js",
     "scripts": {
-        "start": "node src/dist/server.js",
-        "dev": "nodemon src/server.ts",
+        "start": "node dist/server.js",
+        "dev": "nodemon --exec ts-node src/server.ts",
         "build": "tsc",
         "watch": "tsc -w"
     },
